--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
   "editor.quickSuggestions": {
     "strings": true
   },
-  "tailwindCSS.experimental.configFile": "client/tailwind.config.js"
+  "tailwindCSS.experimental.configFile": "client/tailwind.config.js",
+  "files.exclude": {}
 }
