マイグレーション完了

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -22,6 +22,7 @@ RUN apt-get update && apt-get install -y \
     libfreetype6-dev \
     libjpeg-dev \
     libonig-dev \
+    iputils-ping \
     && docker-php-ext-install pdo pdo_mysql mysqli zip \
     && docker-php-ext-configure gd --with-freetype=/usr/include/ --with-jpeg=/usr/include \
     && docker-php-ext-install -j$(nproc) gd
@@ -45,4 +46,3 @@ COPY . /var/www/
 # パーミッションの設定
 RUN chmod -R 775 storage bootstrap/cache \
     && chown -R www-data:www-data /var/www/storage
-
