--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,14 @@
     "lint:fix": "next lint --fix"
   },
   "dependencies": {
+    "@draft-js-plugins/anchor": "^4.2.1",
+    "@draft-js-plugins/editor": "^4.1.4",
+    "@draft-js-plugins/image": "^4.1.4",
+    "@draft-js-plugins/inline-toolbar": "^4.2.1",
+    "@draft-js-plugins/linkify": "^4.2.2",
     "@headlessui/react": "^1.4.2",
     "axios": "^0.21.1",
+    "draft-js": "^0.11.7",
     "next": "^14.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
