--- a/client/package.json
+++ b/client/package.json
@@ -11,16 +11,22 @@
   },
   "dependencies": {
     "@draft-js-plugins/anchor": "^4.2.1",
+    "@draft-js-plugins/buttons": "^4.3.3",
     "@draft-js-plugins/editor": "^4.1.4",
     "@draft-js-plugins/image": "^4.1.4",
     "@draft-js-plugins/inline-toolbar": "^4.2.1",
     "@draft-js-plugins/linkify": "^4.2.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@headlessui/react": "^1.4.2",
     "axios": "^0.21.1",
     "draft-js": "^0.11.7",
+    "draft-js-export-html": "^1.4.1",
+    "immutable": "3.x",
     "next": "^14.2.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-draft-wysiwyg": "^1.15.0",
     "swr": "^1.3.0"
   },
   "devDependencies": {
