--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@emotion/styled": "^11.11.5",
     "@headlessui/react": "^1.4.2",
     "axios": "^0.21.1",
+    "csrf": "^3.1.0",
     "draft-js": "^0.11.7",
     "draft-js-export-html": "^1.4.1",
     "immutable": "3.x",
