--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@draft-js-plugins/linkify": "^4.2.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "csrf": "^3.1.0",
     "draft-js": "^0.11.7",
     "draft-js-export-html": "^1.4.1",
     "immutable": "3.x",
