--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-draft-wysiwyg": "^1.15.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "swr": "^1.3.0"
   },
   "devDependencies": {
