--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,9 @@
     "lint:fix": "next lint --fix"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/sortable": "^8.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@draft-js-plugins/anchor": "^4.2.1",
     "@draft-js-plugins/buttons": "^4.3.3",
     "@draft-js-plugins/editor": "^4.1.4",
