--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
     "react-dom": "^18.3.1",
     "react-draft-wysiwyg": "^1.15.0",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-modal": "^3.16.1",
     "swr": "^1.3.0"
   },
   "devDependencies": {
