--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -37,11 +37,16 @@ services:
             - "3000:3000"
         depends_on: 
             - server
+        command: sh -c "npm install && npm run dev"
+        networks:
+            - default
     mail:
         image: mailhog/mailhog
         ports:
             - "8025:8025"
             - "1025:1025" 
+        networks:
+            - default
 
 networks:
   default:
