--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -12,6 +12,7 @@ services:
             MYSQL_USER: root
             MYSQL_PASSWORD: root
             MYSQL_DATABASE: test
+            TZ: 'Asia/Tokyo'
         volumes: 
             - ./db/data:/var/lib/mysql
             - ./db/initdb.d:/docker-entrypoint-initdb.d
