--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "immutable": "3.x",
     "next-auth": "^4.24.7",
     "react": "^18.3.1",
+    "react-calendar": "^5.0.0",
     "react-dom": "^18.3.1",
     "react-draft-wysiwyg": "^1.15.0"
   }
