--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "date-fns": "^3.6.0",
-    "next-auth": "^4.24.7"
+    "next-auth": "^4.24.7",
+    "react-calendar": "^5.0.0"
   }
 }
