--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,8 @@
     "@headlessui/react": "^1.4.2",
     "axios": "^0.21.1",
     "csrf": "^3.1.0",
+    "date-fns-timezone": "^0.1.4",
+    "date-fns-tz": "^3.1.3",
     "draft-js": "^0.11.7",
     "draft-js-export-html": "^1.4.1",
     "immutable": "3.x",
