--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
     "react-calendar": "^5.0.0",
     "react-dom": "^18.3.1",
     "react-draft-wysiwyg": "^1.15.0",
+    "react-icons": "^5.2.1",
     "react-infinite-scroll-component": "^6.1.0",
     "react-modal": "^3.16.1",
     "swr": "^1.3.0"
