--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-calendar": "^5.0.0",
     "react-dom": "^18.3.1",
     "react-draft-wysiwyg": "^1.15.0",
-    "react-hook-form": "^7.52.1"
+    "react-hook-form": "^7.52.1",
+    "react-icons": "^5.2.1"
   }
 }
