--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@headlessui/react": "^1.4.2",
+    "@reduxjs/toolkit": "^2.2.7",
     "axios": "^0.21.1",
     "csrf": "^3.1.0",
     "date-fns-timezone": "^0.1.4",
@@ -37,6 +38,7 @@
     "react-icons": "^5.2.1",
     "react-infinite-scroll-component": "^6.1.0",
     "react-modal": "^3.16.1",
+    "react-redux": "^9.1.2",
     "swr": "^1.3.0"
   },
   "devDependencies": {
