--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@draft-js-plugins/linkify": "^4.2.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@reduxjs/toolkit": "^2.2.7",
     "csrf": "^3.1.0",
     "draft-js": "^0.11.7",
     "draft-js-export-html": "^1.4.1",
@@ -17,6 +18,7 @@
     "react-dom": "^18.3.1",
     "react-draft-wysiwyg": "^1.15.0",
     "react-hook-form": "^7.52.1",
-    "react-icons": "^5.2.1"
+    "react-icons": "^5.2.1",
+    "react-redux": "^9.1.2"
   }
 }
