--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -42,11 +42,20 @@ RUN curl -sL https://deb.nodesource.com/setup_18.x | bash - \
 
 WORKDIR /var/www/
 RUN mkdir -p /var/www/storage /var/www/bootstrap/cache
-# Laravelプロジェクトのソースコードをコピー
-# COPY . /var/www/
-# パーミッションの設定
+
+# ソースコードコピー（コメントアウト解除）
+COPY . /var/www/
+
+# パーミッション設定
 RUN chmod -R 775 storage bootstrap/cache \
     && chown -R www-data:www-data /var/www/storage
 
 # PHP設定ファイルのコピー
 COPY php.ini /usr/local/etc/php/
+
+# エントリーポイントスクリプト追加
+COPY docker-entrypoint.sh /usr/local/bin/
+RUN chmod +x /usr/local/bin/docker-entrypoint.sh
+
+ENTRYPOINT ["/usr/local/bin/docker-entrypoint.sh"]
+CMD ["apache2-foreground"]
