TOPページのレイアウト作成

--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@reduxjs/toolkit": "^2.2.7",
+    "chart.js": "^4.4.3",
     "csrf": "^3.1.0",
     "draft-js": "^0.11.7",
     "draft-js-export-html": "^1.4.1",
+    "framer-motion": "^11.3.21",
     "immutable": "3.x",
     "next-auth": "^4.24.7",
     "react": "^18.3.1",
     "react-calendar": "^5.0.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-draft-wysiwyg": "^1.15.0",
     "react-hook-form": "^7.52.1",
