--- a/client/package.json
+++ b/client/package.json
@@ -24,15 +24,18 @@
     "@headlessui/react": "^1.4.2",
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^0.21.1",
+    "chart.js": "^4.4.3",
     "csrf": "^3.1.0",
     "date-fns-timezone": "^0.1.4",
     "date-fns-tz": "^3.1.3",
     "draft-js": "^0.11.7",
     "draft-js-export-html": "^1.4.1",
+    "framer-motion": "^11.3.21",
     "immutable": "3.x",
     "next": "^14.2.3",
     "react": "^18.3.1",
     "react-calendar": "^5.0.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-draft-wysiwyg": "^1.15.0",
     "react-icons": "^5.2.1",
