--- a/client/package.json
+++ b/client/package.json
@@ -42,6 +42,7 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-modal": "^3.16.1",
     "react-redux": "^9.1.2",
+    "react-responsive": "^10.0.0",
     "swr": "^1.3.0"
   },
   "devDependencies": {
