--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-draft-wysiwyg": "^1.15.0",
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "react-responsive": "^10.0.0"
   }
 }
