--- a/client/package.json
+++ b/client/package.json
@@ -43,7 +43,8 @@
     "react-modal": "^3.16.1",
     "react-redux": "^9.1.2",
     "react-responsive": "^10.0.0",
-    "swr": "^1.3.0"
+    "swr": "^1.3.0",
+    "three": "^0.167.1"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.12.1",
