--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
-    "react-responsive": "^10.0.0"
+    "react-responsive": "^10.0.0",
+    "three": "^0.167.1"
   }
 }
