--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,9 +6,8 @@
   "files.exclude": {},
   "eslint.enable": true,
   "eslint.format.enable": true,
-  "editor.codeActionsOnSave": {
-    "source.organizeImports": true
-  },
+
   "editor.formatOnSave": true,
-  "editor.defaultFormatter": "esbenp.prettier-vscode"
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "eslint.workingDirectories": ["app"]
 }
