--- a/client/.babelrc
+++ b/client/.babelrc
@@ -1,3 +1,11 @@
 {
-  "presets": ["@babel/preset-react"]
+  "presets": [
+    "next/babel",
+    [
+      "@babel/preset-react",
+      {
+        "runtime": "automatic"
+      }
+    ]
+  ]
 }
