--- a/client/.prettierrc
+++ b/client/.prettierrc
@@ -4,5 +4,7 @@
   "semi": false,
   "singleQuote": true,
   "tabWidth": 2,
-  "trailingComma": "all"
+  "trailingComma": "all",
+  "requirePragma": false,
+  "insertPragma": false
 }
