--- a/client/package.json
+++ b/client/package.json
@@ -24,7 +24,7 @@
     "@emotion/styled": "^11.11.5",
     "@headlessui/react": "^1.4.2",
     "@reduxjs/toolkit": "^2.2.7",
-    "axios": "^0.21.1",
+    "axios": "^1.7.3",
     "chart.js": "^4.4.3",
     "csrf": "^3.1.0",
     "date-fns-timezone": "^0.1.4",
@@ -45,7 +45,8 @@
     "react-redux": "^9.1.2",
     "react-responsive": "^10.0.0",
     "swr": "^1.3.0",
-    "three": "^0.167.1"
+    "three": "^0.167.1",
+    "@babel/preset-react": "^7.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
