--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@babel/preset-react": "^7.0.0",
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
     "@dnd-kit/utilities": "^3.2.2",
@@ -29,6 +30,7 @@
     "csrf": "^3.1.0",
     "date-fns-timezone": "^0.1.4",
     "date-fns-tz": "^3.1.3",
+    "dotenv": "^16.4.5",
     "draft-js": "^0.11.7",
     "draft-js-export-html": "^1.4.1",
     "framer-motion": "^11.3.21",
@@ -45,8 +47,7 @@
     "react-redux": "^9.1.2",
     "react-responsive": "^10.0.0",
     "swr": "^1.3.0",
-    "three": "^0.167.1",
-    "@babel/preset-react": "^7.0.0"
+    "three": "^0.167.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
