本番環境用に調整

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -28,8 +28,10 @@ services:
       - db
     networks:
       - default
-    environment:
-      - SERVER_NAME=example.com
+    command: >
+      sh -c "chmod -R 775 /var/www/storage &&
+             chown -R www-data:www-data /var/www/storage &&
+             apache2-foreground"
 
   client:
     build:
