開発環境の設定変更

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -10,10 +10,7 @@ COPY 000-default.conf /etc/apache2/sites-enabled/
 # Composerのインストール
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
-# Composerの依存関係をインストール
-COPY composer.json composer.lock /var/www/
-WORKDIR /var/www/
-RUN composer install --no-dev --optimize-autoloader
+
 
 # ミドルウェアインストール
 RUN apt-get update && apt-get install -y \
@@ -62,8 +59,9 @@ COPY php.ini /usr/local/etc/php/
 COPY docker-entrypoint.sh /usr/local/bin/
 RUN chmod +x /usr/local/bin/docker-entrypoint.sh
 
-# マイグレーションの実行
-RUN php artisan migrate --force
+
+# RUN composer install --no-dev --optimize-autoloader
+# php artisan migrate --force
 
 ENTRYPOINT ["/usr/local/bin/docker-entrypoint.sh"]
 CMD ["apache2-foreground"]
