--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -20,6 +20,7 @@ services:
       - default
   server:
     build: ./server
+    dockerfile: Dockerfile.prod
     ports:
       - "8080:80"
     volumes:
