--- a/server/000-default.conf
+++ b/server/000-default.conf
@@ -1,4 +1,4 @@
-<VirtualHost *:80>
+# <VirtualHost *:80>
        ServerAdmin webmaster@localhost
        DocumentRoot /var/www/public
        ErrorLog ${APACHE_LOG_DIR}/error.log
@@ -7,5 +7,29 @@
            AllowOverride All
            Require all granted
        </Directory>
-</VirtualHost>
+    #    <Location />
+    #        ProxyPass http://localhost:3000/
+    #        ProxyPassReverse http://localhost:3000/
+    #    </Location>
+# </VirtualHost>
 
+
+#    <VirtualHost *:80>
+#        ServerName http://localhost
+
+#        ProxyRequests Off
+#        ProxyPreserveHost On
+#        ProxyVia Full
+#        <Proxy *>
+#            Require all granted
+#        </Proxy>
+
+#        RewriteEngine On
+#        RewriteCond %{HTTP_HOST} ^${DOCKER_RewriteCond_URL}$
+#        RewriteRule ^/(.*)$ http://${DOCKER_REDIRECT_URL}/$1 [R=301,L]
+
+#        <Location />
+#            ProxyPass http://${DOCKER_REDIRECT_URL}/
+#            ProxyPassReverse http://${DOCKER_REDIRECT_URL}/
+#        </Location>
+#    </VirtualHost>
