--- a/server/Dockerfile.prod
+++ b/server/Dockerfile.prod
@@ -65,13 +65,13 @@ RUN chmod -R 777 /var/www/storage /var/www/bootstrap/cache
 COPY php.ini /usr/local/etc/php/
 
 # エントリーポイントスクリプト追加
-COPY docker-entrypoint.sh /usr/local/bin/
-RUN chmod +x /usr/local/bin/docker-entrypoint.sh
+COPY docker-entrypoint.prod.sh /usr/local/bin/
+RUN chmod +x /usr/local/bin/docker-entrypoint.prod.sh
 
 # WORKDIR /var/www/
 # RUN composer install --no-dev --optimize-autoloader
 # RUN php artisan migrate --force
 
 RUN chmod -R 777 /var/www/storage/
-ENTRYPOINT ["/usr/local/bin/docker-entrypoint.sh"]
+ENTRYPOINT ["/usr/local/bin/docker-entrypoint.prod.sh"]
 CMD ["apache2-foreground"]
