--- a/server/Dockerfile.dev
+++ b/server/Dockerfile.dev
@@ -1,8 +1,12 @@
 # どんなdockerイメージを利用して構築をするか
 FROM php:8.2-apache
 
+# Apacheのモジュールを有効化
+RUN a2enmod rewrite proxy proxy_http
+
+# シンボリックリンクの作成（存在しない場合のみ）
 RUN cd /etc/apache2/mods-enabled \
-    && ln -s ../mods-available/rewrite.load
+    && if [ ! -e rewrite.load ]; then ln -s ../mods-available/rewrite.load; fi
 
 # 設定ファイルをdockerコンテナ内のPHP、Apacheに読み込ませる
 COPY 000-default.conf /etc/apache2/sites-enabled/
@@ -12,7 +16,6 @@ RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local
 
 # Composerの依存関係をインストール
 COPY composer.json composer.lock /var/www/
-
 
 # ミドルウェアインストール
 RUN apt-get update && apt-get install -y \
@@ -65,13 +68,13 @@ RUN chmod -R 777 /var/www/storage /var/www/bootstrap/cache
 COPY php.ini /usr/local/etc/php/
 
 # エントリーポイントスクリプト追加
-COPY docker-entrypoint.sh /usr/local/bin/
-RUN chmod +x /usr/local/bin/docker-entrypoint.sh
+COPY docker-entrypoint.dev.sh /usr/local/bin/
+RUN chmod +x /usr/local/bin/docker-entrypoint.dev.sh
 
 # WORKDIR /var/www/
 # RUN composer install --no-dev --optimize-autoloader
 # RUN php artisan migrate --force
 
 RUN chmod -R 777 /var/www/storage/
-ENTRYPOINT ["/usr/local/bin/docker-entrypoint.sh"]
+ENTRYPOINT ["/usr/local/bin/docker-entrypoint.dev.sh"]
 CMD ["apache2-foreground"]
