ローカル環境で、ポート番号なしで表示できるようにした

--- a/client/.env.development
+++ b/client/.env.development
@@ -1,5 +1,5 @@
 NEXT_PUBLIC_BACKEND_URL=http://localhost:8080
-NEXT_PUBLIC_FRONTEND_URL=http://localhost:3000
+NEXT_PUBLIC_FRONTEND_URL=http://localhost
 SITE_NAME=incoll-vol.2-開発環境
 SITE_DESCRIPTION=投資アイデアを整理し、洞察を深める。あなたの投資戦略を最適化するメモツール。
 NODE_ENV=development
