--- a/server/000-default.conf
+++ b/server/000-default.conf
@@ -1,5 +1,9 @@
-# <VirtualHost *:80>
+<VirtualHost *:80>
        ServerAdmin webmaster@localhost
+       ServerName server
+    #    ProxyPreserveHost On
+    #    ProxyPass / http://client:3000/
+    #    ProxyPassReverse / http://client:3000/
        DocumentRoot /var/www/public
        ErrorLog ${APACHE_LOG_DIR}/error.log
        CustomLog ${APACHE_LOG_DIR}/access.log combined
@@ -7,29 +11,8 @@
            AllowOverride All
            Require all granted
        </Directory>
-    #    <Location />
-    #        ProxyPass http://localhost:3000/
-    #        ProxyPassReverse http://localhost:3000/
-    #    </Location>
-# </VirtualHost>
-
-
-#    <VirtualHost *:80>
-#        ServerName http://localhost
-
-#        ProxyRequests Off
-#        ProxyPreserveHost On
-#        ProxyVia Full
-#        <Proxy *>
-#            Require all granted
-#        </Proxy>
-
-#        RewriteEngine On
-#        RewriteCond %{HTTP_HOST} ^${DOCKER_RewriteCond_URL}$
-#        RewriteRule ^/(.*)$ http://${DOCKER_REDIRECT_URL}/$1 [R=301,L]
-
-#        <Location />
-#            ProxyPass http://${DOCKER_REDIRECT_URL}/
-#            ProxyPassReverse http://${DOCKER_REDIRECT_URL}/
-#        </Location>
-#    </VirtualHost>
+    #    <Proxy *>
+    #        Order allow,deny
+    #        Allow from all
+    #    </Proxy>
+</VirtualHost>
